--- a/_data/publist.yml
+++ b/_data/publist.yml
@@ -1028,7 +1028,7 @@
     display:  Ngan T.H. Le, Michael Kidd, P2757US00, UADA 2021-020 (UAF 2021-032)
   type: 3
   news2:
-
+  
 - title: "Artificial Intelligence And Vision-Based Broiler Body Weight Measurement System And Process"
   image:
   description: 
@@ -1044,8 +1044,22 @@
   description: 
   authors: 
   link:
-    url: 
+    url: null
     display: "While quadrupeds can open the operational domains of robots thanks to their dynamic locomotion capabilities, conventional controllers for legged locomotion constraint their applications to relatively simple environments that can be taken over by wheeled robots. Here we use reinforcement learning to train a quadruped to walk on various terrains. In the simulation, a quadruped robot (Unitree Go1) learns to walk across challenging terrain, including uneven surfaces, slopes, stairs, and obstacles, while following linear- and angular- velocity commands."
+  type: 3
   year: 2024
   category: Robotics
   subCategory: Locomotion
+
+
+- title: "Chick Sexing on Face Part <br> <br> AI Processing Plant"
+  image: chick_sexing.png
+  description: 
+  authors: 
+  link:
+    url: null
+    display: " Artificial Intelligence And Vision-Based Broiler Body Weight Measurement System And Process <br> <br> - Chicken Processing Plant With Automated Computer Vision"
+  type: 3
+  year: 2024
+  category: Computer Vision
+  subCategory: Agriculture
