Adding Kim Tran to website

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -39,6 +39,11 @@
   photo: Maral_Zarvani.jpg
   url: maral_zarvani
 - group: 2
+  info: Since 2024
+  name: Kim Tran Hoang
+  photo: kim_tran.jpg
+  url: kim_tran
+- group: 2
   info: Since 2023
   name: Marta Veganzones
   photo: marta_veganzones.png
