Adding Duy le to website

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -38,6 +38,11 @@
   name: Maral Zarvani
   photo: Maral_Zarvani.jpg
   url: maral_zarvani
+- group: 1
+  info: Since 2024
+  name: Duy Le
+  photo: duy_le.jpeg
+  url: duy_le
 - group: 2
   info: Since 2024
   name: Kim Tran Hoang
