--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -3,8 +3,8 @@
   name: Ngan Le
   photo: ngan_le.jpg
   url: ngan_le
-- group: 7
-  info: Since 2023
+- group: 8
+  info: MSc (graduated 2023) - CMU
   name: Kashu Yamazaki
   photo: kashu_yamazaki.jpg
   url: kashu_yamazaki
