Johnmark Clements profile
Adding Johnmark Clements to the website.

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -148,3 +148,8 @@
   name: Yuki Ikebe
   photo: yuki_ikebe.png
   url: yuki_ikebe
+  group: 3
+  info: Since 2024
+  name: Johnmark Clements
+  photo: johnmark_clements.png
+  url: johnmark_clements
