--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -151,5 +151,5 @@
   group: 3
   info: Since 2024
   name: Johnmark Clements
-  photo: johnmark_clements.png
+  photo: johnmark_clements.jpg
   url: johnmark_clements
