Added Malachi Massey

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -148,8 +148,13 @@
   name: Yuki Ikebe
   photo: yuki_ikebe.png
   url: yuki_ikebe
-  group: 3
+- group: 3
   info: Since 2024
   name: Johnmark Clements
   photo: johnmark_clements.jpg
   url: johnmark_clements
+- group: 3
+  info: Since 2024
+  name: Malachi Massey
+  photo: malachi_massey.jpg
+  url: malachi_massey
