update team page

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -73,6 +73,11 @@
   name: Phillip Cannon
   photo: phillip_cannon.png
   url: phillip_cannon
+- group: 2
+  info: Since 2024
+  name: Samuel Michael Lin
+  photo: no_pic.png
+  url: samuel_lin
 - group: 3
   info: Since 2021
   name: Anh Tran
