add team member

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -163,3 +163,8 @@
   name: Malachi Massey
   photo: malachi_massey.jpg
   url: malachi_massey
+- group: 3
+  info: Since 2024
+  name: Bryan Williams
+  photo: bryan_williams.png
+  url: bryan_williams
