--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -144,7 +144,7 @@
   photo: kala_rohit.png
   url: kala_rohit
 - group: 3
-  info: Undergraduate Student
+  info: Since 2024
   name: Yuki Ikebe
   photo: yuki_ikebe.png
   url: yuki_ikebe
