Fixing Gladys entry

--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -168,3 +168,8 @@
   name: Bryan Williams
   photo: bryan_williams.png
   url: bryan_williams
+- group: 2
+  info: Since 2024
+  name: Gladys Gawugah
+  photo: gladys_gawugah.jpeg
+  url: galdys_gawugah
