--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -171,5 +171,5 @@
 - group: 2
   info: Since 2024
   name: Gladys Gawugah
-  photo: gladys_gawugah.jpeg
+  photo: gladys_gawugah.jpg
   url: galdys_gawugah
